# XT-Ray

./: .gitignore  CMakeLists.txt  Ray.h  XT-Ray.cpp  XT-Ray.h  pathtracing.cpp  pathtracing.h
includes/glad/: glad.h
lib/: glfw3.lib
scene/: common.h  light.cpp  light.h  ray.cpp  ray.h  scene.cpp  scene.h  scenecreator.cpp  scenecreator.h  shape.cpp  shape.h
shader/: shader.cpp  shader.h
src/glad/: glad.c
